# o3json5

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: bench.py  tutorial.py
src/: core.rs  lib.rs
tests/: test_small.py
